		- Add option to set which side of the ship AI will present toward target using roll control (only active when PID is enabled).
	- Fix weapon types with no targeting type (i.e. AIR-2) not firing within engage range.
- UI:
	- Updated Chinese localization thanks to user Marv1n-M.

1.6.12.0
IMPROVEMENTS / FIXES
- General:
	- Fix Pwing HP scaling for large pwings being used as fuselages.
	- Fix PWing Control Surface Offset angle resetting on one side.
	- Add a time-sync logging option (with auto-enable for competitions) for logging in-game vs real-time timestamps for post-recording resynchronisation.
		- Toggle and logging interval options are available in the "Other Settings" section of the settings.
		- The timestamps are logged as compressed CSV files in the BDArmory/Logs/TimeSync folder.
	- Add Waypoint Mode Course Builder GUI tool (accessible from the Waypoints Section of the vessel Spawner GUI) for easy construction of custom waypoint courses.
		- Can either manually construct course from scratch or record a course as you manually pilot a craft along the course path. Courses/gates on loaded courses can be deleted via right-click.
	- List of things that cannot be set to Wood hull material expanded to other functional parts (servos/radiators/ISRU converters/RTGs) that couldn't logically be made out of wood.
	- Restore the 'ControlledActions' on the KAL too.
	- Restructuring of the localisation files (both layout and many tags) for maintainability and ease-of-editing in IDEs.
		- Adds a script for maintaining structure between localisation files.
		- Some entries in languages other than en-us will require updating — these are currently commented out with "???" as a placeholder.
	- Adds option to toggle LightFX for explosions on/off for performance/parallax compatibility.
	- Adds option to toggle off bullet water hit effects for performance.
	- Skip the 'ProgressTracking' scenario when creating a clean save to avoid triggering tutorials again.