@@ -266,9 +266,6 @@ namespace BDArmory.Weapons.Missiles
 
         float debugTurnRate;
 
-        private enum RCSClearanceStates { Clearing, Turning, Cleared }
-        private RCSClearanceStates rcsClearanceState = RCSClearanceStates.Cleared;
-
         List<GameObject> boosters;
 
         List<GameObject> fairings;
@@ -1404,7 +1401,7 @@ namespace BDArmory.Weapons.Missiles
                 MissileState = MissileStates.Drop;
                 part.crashTolerance = torpedo ? waterImpactTolerance : 9999; //to combat stresses of launch, missiles generate a lot of G Force
                 part.explosionPotential = 0; // Minimise the default part explosion FX that sometimes gets offset from the main explosion.
-                rcsClearanceState = (GuidanceMode == GuidanceModes.Orbital && hasRCS && vacuumSteerable && (vessel.InVacuum()) ? RCSClearanceStates.Clearing : RCSClearanceStates.Cleared); // Set up clearance check if missile hasRCS, is vacuumSteerable, and is in space
+                vacuumClearanceState = (GuidanceMode == GuidanceModes.Orbital && vacuumSteerable && (vessel.InVacuum()) ? VacuumClearanceStates.Clearing : VacuumClearanceStates.Cleared); // Set up clearance check if missile is vacuumSteerable, and is in space
 
                 StartCoroutine(MissileRoutine());
                 var tnt = part.FindModuleImplementing<BDExplosivePart>();
@@ -2802,50 +2799,9 @@ namespace BDArmory.Weapons.Missiles
 
             // In vacuum, with RCS, point towards target shortly after launch to minimize wasted delta-V
             // During this maneuver, check that we have cleared any obstacles before throttling up
-            if (hasRCS && vacuumSteerable && (vessel.InVacuum()))
-            {
-                float dotTol;
-                Vector3 toSource = SourceVessel ? part.transform.position - SourceVessel.CoM : orbitalTarget;
-                switch (rcsClearanceState)
-                {
-                    case RCSClearanceStates.Clearing: // We are launching, stay on course
-                        {
-                            dotTol = 0.98f;
-                            if (Physics.Raycast(new Ray(part.transform.position, orbitalTarget), out RaycastHit hit, toSource.sqrMagnitude, (int)(LayerMasks.Parts | LayerMasks.Scenery | LayerMasks.Unknown19 | LayerMasks.Wheels)))
-                            {
-                                Part p = hit.collider.gameObject.GetComponentInParent<Part>();
-                                if (p != null && hit.distance > 10f)
-                                    rcsClearanceState = RCSClearanceStates.Turning;
-                            }
-                            else
-                                rcsClearanceState = RCSClearanceStates.Turning;
-                            orbitalTarget = part.transform.position + 100f * GetForwardTransform();
-                        }
-                        break;
-                    case RCSClearanceStates.Turning: // It is now safe to turn towards target and burn RCS to maneuver away from SourceVessel
-                        {
-                            dotTol = 0.98f;
-                            if ((Vector3.Dot((orbitalTarget - part.transform.position).normalized, GetForwardTransform()) >= dotTol) &&
-                                !Physics.Raycast(new Ray(part.transform.position, orbitalTarget), out RaycastHit hit, toSource.sqrMagnitude, (int)(LayerMasks.Parts | LayerMasks.Scenery | LayerMasks.Unknown19 | LayerMasks.Wheels)))
-                                rcsClearanceState = RCSClearanceStates.Cleared;
-                        }
-                        break;
-                    default: // We are engaging target
-                        {
-                            dotTol = 0.7f;
-                        }
-                        break;
-                }
-
-                // Rotate towards target if necessary
-                if (Vector3.Dot((orbitalTarget - part.transform.position).normalized, GetForwardTransform()) < dotTol)
-                {
-                    Throttle = 0;
-                    turnRateDPS *= 15f;
-                }
-                else
-                    Throttle = 1f;
-            }
+            orbitalTarget = VacuumClearanceManeuver(orbitalTarget, part.transform.position, hasRCS, vacuumSteerable);
+            if (Throttle == 0)
+                turnRateDPS *= 15f;
 
             part.transform.rotation = Quaternion.RotateTowards(part.transform.rotation, Quaternion.LookRotation(orbitalTarget - part.transform.position, TargetVelocity), turnRateDPS * Time.fixedDeltaTime);
             if (TimeIndex > dropTime + 0.25f)
@@ -3030,9 +2986,9 @@ namespace BDArmory.Weapons.Missiles
         {
             try
             {
-                if (rcsClearanceState == RCSClearanceStates.Clearing || (TimeIndex < dropTime + Mathf.Min(0.5f, BDAMath.SolveTime(10f, currentThrust / part.mass)))) return; // Don't use RCS immediately after launch or when clearing a vessel to avoid running into VLS/SourceVessel
+                if (vacuumClearanceState == VacuumClearanceStates.Clearing || (TimeIndex < dropTime + Mathf.Min(0.5f, BDAMath.SolveTime(10f, currentThrust / part.mass)))) return; // Don't use RCS immediately after launch or when clearing a vessel to avoid running into VLS/SourceVessel
                 Vector3 relV;
-                if (rcsClearanceState == RCSClearanceStates.Turning && SourceVessel) // Clear away from launching vessel
+                if (vacuumClearanceState == VacuumClearanceStates.Turning && SourceVessel) // Clear away from launching vessel
                 {
                     Vector3 relP = (part.transform.position - SourceVessel.CoM).normalized;
                     relV = relP + (vessel.Velocity() - SourceVessel.Velocity()).normalized.ProjectOnPlanePreNormalized(relP);
